--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,3 +1,4 @@
+<button (click)="goBack()">go back</button>
 <div *ngIf="hero">
 
     <h2>{{hero.name | uppercase}} Details</h2>
@@ -9,3 +10,4 @@
     </div>
 
 </div>
+<button (click)="save()">save</button>
